--- a/package.json
+++ b/package.json
@@ -8,17 +8,11 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
-    "gh-pages": "^3.2.3",
-    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^2.0.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
@@ -47,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
