update build script

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "start": "vite",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "eslintConfig": {
