--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     },
     "description": "Server for Emoji Tracker app.",
     "type": "module",
-    "main": "index.js",
+    "main": "index.mjs",
     "scripts": {
       "start": "nodemon index"
     },
