--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "emoji-tracker-server",
   "version": "2.0.0",
   "engines": {
-    "node": "18.16.1"
+    "node": ">=18.16.1 <19.0.0"
   },
   "description": "Server for Emoji Tracker app.",
   "type": "module",
