--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,8 @@
   "type": "module",
   "main": "index.mjs",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "start": "node index.mjs",
+    "dev": "nodemon index.mjs"
   },
   "author": "Ray Luna",
   "license": "ISC",
