--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "emoji-tracker-server",
   "version": "2.0.0",
   "engines": {
-    "node": "18.12.1"
+    "node": ">=18 <19"
   },
   "description": "Server for Emoji Tracker app.",
   "type": "module",
