--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "emoji-tracker-server",
-  "version": "2.0.0",
+  "name": "emoji-express",
+  "version": "3.0.0",
   "engines": {
     "node": ">=18 <19"
   },
-  "description": "Server for Emoji Tracker app.",
+  "description": "Server for Emoji Express app.",
   "type": "module",
   "main": "index.mjs",
   "scripts": {
