--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emoji-tracker",
+  "name": "emoji-express",
   "version": "3.0.0",
   "private": true,
   "homepage": "https://leon-luna-ray.github.io",
