--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "uuid": "^8.3.2",
     "vite": "^4.3.5",
