--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Ray Luna",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -23,5 +24,8 @@
     "mongoose": "^7.5.0",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6"
   }
 }
