--- a/client/package.json
+++ b/client/package.json
@@ -4,22 +4,15 @@
   "private": true,
   "homepage": "https://leon-luna-ray.github.io",
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.4.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^1.6.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
-    "uuid": "^8.3.2",
     "vite": "^4.3.5",
-    "vite-plugin-svgr": "^3.2.0",
-    "web-vitals": "^1.1.2"
+    "vite-plugin-svgr": "^3.2.0"
   },
   "scripts": {
     "dev": "vite",
