--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://leon-luna-ray.github.io",
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.4.0",
     "jwt-decode": "^4.0.0",
@@ -11,7 +12,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
-    "vite": "^4.3.5",
     "vite-plugin-svgr": "^3.2.0"
   },
   "scripts": {
@@ -41,6 +41,7 @@
     "autoprefixer": "^10.4.16",
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^4.1.11",
+    "vite": "^7.1.2"
   }
 }
