--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,14 @@
   "homepage": "https://leon-luna-ray.github.io",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@vitejs/plugin-react": "^5.0.0",
     "axios": "^1.4.0",
     "jwt-decode": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "6",
-    "react-scripts": "4.0.3",
-    "vite-plugin-svgr": "^3.2.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.1",
+    "react-scripts": "^5.0.1",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "scripts": {
     "dev": "vite",
@@ -38,9 +38,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "gh-pages": "^3.2.3",
-    "postcss": "^8.4.31",
     "tailwindcss": "^4.1.11",
     "vite": "^7.1.2"
   }
